--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>THR RIALO Ultimate HQ Runner</title>
-<style>
-body, html{margin:0;padding:0;overflow:hidden;font-family:sans-serif;background:#0b0f14;color:white;}
-#homeScreen{position:absolute;width:100%;height:100%;background:#0b0f14;display:flex;flex-direction:column;justify-content:center;align-items:center;}
-#homeScreen h1,h2{text-align:center;margin:10px;}
-.menuBtn{margin:10px;padding:10px 30px;font-size:18px;cursor:pointer;background:#00ffff;color:#0b0f14;border:none;border-radius:8px;transition:0.3s;}
-.menuBtn:hover{background:#00aaaa;}
-#gameCanvas{display:none;}
-#score{position:absolute;top:16px;left:16px;font-size:24px;color:#00ffff;text-shadow:1px 1px 3px black;display:none;}
-#gameOver{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:36px;color:red;display:none;text-shadow:2px 2px 5px black;text-align:center;}
-#logo{position:absolute;top:20px;left:50%;transform:translateX(-50%);width:120px;height:120px;border-radius:50%;overflow:hidden;border:5px solid rgba(255,255,255,0.1);box-shadow:0 0 40px rgba(0,200,255,0.5),0 0 60px rgba(0,255,255,0.3) inset;animation: rotateLogo 16s linear infinite;}
-#logo img{width:100%;height:100%;object-fit:cover;}
-@keyframes rotateLogo{0%{transform:translateX(-50%) rotate(0deg);}100%{transform:translateX(-50%) rotate(360deg);}}
-#leaderboardScreen{position:absolute;width:100%;height:100%;background:#0b0f14;display:none;flex-direction:column;justify-content:center;align-items:center;}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -39,175 +26,12 @@ body, html{margin:0;padding:0;overflow:hidden;font-family:sans-serif;background:
 <div id="score">Score: 0</div>
 <div id="gameOver">Game Over! Press R to Restart</div>
 <div id="logo">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAD2..." alt="RIALO Logo">
+  <img src="assets/rialo_logo.png" alt="RIALO Logo">
 </div>
 
-<audio id="jumpSound" src="data:audio/mp3;base64,//uQxAA..." preload="auto"></audio>
-<audio id="hitSound" src="data:audio/mp3;base64,//uQxAA..." preload="auto"></audio>
+<audio id="jumpSound" src="assets/jump.mp3" preload="auto"></audio>
+<audio id="hitSound" src="assets/collision.mp3" preload="auto"></audio>
 
-<script>
-const canvas=document.getElementById('gameCanvas');
-const ctx=canvas.getContext('2d');
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
-
-let player={x:150,y:canvas.height-120,radius:40,dx:0,dy:0,gravity:1.5,jumpForce:20,grounded:true,jumpCount:0,maxJumps:2};
-let obstacles=[],obstacleInterval=100,obstacleTimer=0,gameSpeed=6,score=0,gameOver=false,keys={};
-let particles=[];
-
-let backgroundLayers=[];
-for(let i=0;i<3;i++){
-    let layer=[];
-    for(let j=0;j<50;j++){
-        layer.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,size:Math.random()*(20-i*5)+5,dy:0.2*(i+1),color:`rgba(0,200,255,${0.05+0.05*i})`});
-    }
-    backgroundLayers.push(layer);
-}
-
-let ghostImages=[];
-for(let i=0;i<3;i++){
-    let img=new Image();
-    img.src='data:image/png;base64,...'; // Ghost image base64 here
-    ghostImages.push(img);
-}
-
-function drawPlayer(){
-    ctx.save();
-    ctx.beginPath();
-    ctx.arc(player.x+player.radius,player.y+player.radius,player.radius,0,Math.PI*2);
-    ctx.closePath();
-    ctx.clip();
-    ctx.drawImage(document.querySelector('#logo img'),player.x,player.y,player.radius*2,player.radius*2);
-    ctx.shadowColor='#00ffff';
-    ctx.shadowBlur=20;
-    ctx.strokeStyle='#00ffff';
-    ctx.lineWidth=4;
-    ctx.stroke();
-    ctx.restore();
-
-    // particles
-    particles.forEach((p,i)=>{
-        ctx.beginPath();
-        ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
-        ctx.fillStyle=p.color;
-        ctx.fill();
-        p.x+=p.dx;p.y+=p.dy;p.size*=0.95;
-        if(p.size<0.5) particles.splice(i,1);
-    });
-}
-
-function drawObstacles(){
-    obstacles.forEach(ob=>{
-        ctx.save();
-        ctx.globalAlpha=0.4+Math.random()*0.3;
-        ctx.drawImage(ghostImages[Math.floor(Math.random()*ghostImages.length)],ob.x,ob.y,ob.width,ob.height);
-        ctx.restore();
-    });
-}
-
-function drawBackground(){
-    backgroundLayers.forEach(layer=>{
-        layer.forEach(el=>{
-            ctx.beginPath();
-            ctx.arc(el.x,el.y,el.size,0,Math.PI*2);
-            ctx.fillStyle=el.color;
-            ctx.fill();
-            el.y+=el.dy;
-            if(el.y-el.size>canvas.height) el.y=-el.size;
-        });
-    });
-}
-
-function spawnObstacle(){
-    const width=Math.random()*60+30;
-    const height=Math.random()*60+30;
-    obstacles.push({x:canvas.width,y:canvas.height-height-70,width:width,height:height});
-}
-
-function checkCollision(r){
-    for(let ob of obstacles){
-        if(r.x+r.radius*2>ob.x && r.x<ob.x+ob.width && r.y+r.radius*2>ob.y && r.y<ob.y+ob.height){
-            document.getElementById('hitSound').play();
-            return true;
-        }
-    }
-    return false;
-}
-
-function update(){
-    if(gameOver)return;
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    drawBackground();
-
-    player.dy+=player.gravity;
-    player.y+=player.dy;
-    player.x+=player.dx;
-
-    if(player.y+player.radius*2>=canvas.height-70){player.y=canvas.height-70-player.radius*2;player.dy=0;player.grounded=true;player.jumpCount=0;}
-    else player.grounded=false;
-    if(player.x<0)player.x=0;
-    if(player.x+player.radius*2>canvas.width)player.x=canvas.width-player.radius*2;
-
-    drawPlayer();
-
-    obstacleTimer++;
-    if(obstacleTimer>=obstacleInterval){spawnObstacle();obstacleTimer=0;}
-
-    obstacles.forEach((ob,index)=>{
-        ob.x-=gameSpeed;
-        drawObstacles();
-        if(checkCollision(player)){gameOver=true;document.getElementById('gameOver').style.display='block';}
-        if(ob.x+ob.width<0){obstacles.splice(index,1);score++;document.getElementById('score').textContent='Score: '+score;}
-    });
-
-    if(score>0 && score%10===0)gameSpeed=6+score/10;
-    requestAnimationFrame(update);
-}
-
-window.addEventListener('keydown',e=>{
-    keys[e.code]=true;
-    if((e.code==='Space'||e.code==='ArrowUp')&&(player.grounded||player.jumpCount<player.maxJumps)){
-        player.dy=-player.jumpForce;player.jumpCount++;
-        document.getElementById('jumpSound').play();
-        for(let i=0;i<5;i++)particles.push({x:player.x+player.radius,y:player.y+player.radius,size:5,color:'#00ffff',dx:(Math.random()-0.5)*4,dy:-Math.random()*4});
-    }
-});
-window.addEventListener('keyup',e=>{keys[e.code]=false;});
-function handleMovement(){
-    if(keys['ArrowLeft'])player.dx=-6;
-    else if(keys['ArrowRight'])player.dx=6;
-    else player.dx=0;
-    requestAnimationFrame(handleMovement);
-}
-handleMovement();
-
-function restartGame(){
-    obstacles=[];player.y=canvas.height-120;player.dy=0;player.x=150;score=0;gameOver=false;player.jumpCount=0;
-    document.getElementById('score').textContent='Score: 0';
-    document.getElementById('gameOver').style.display='none';
-    update();
-}
-
-document.getElementById('startBtn').addEventListener('click',()=>{
-    document.getElementById('homeScreen').style.display='none';
-    canvas.style.display='block';
-    document.getElementById('score').style.display='block';
-    document.getElementById('logo').style.display='block';
-    update();
-});
-
-document.getElementById('leaderBtn').addEventListener('click',()=>{
-    document.getElementById('homeScreen').style.display='none';
-    document.getElementById('leaderboardScreen').style.display='flex';
-    const list=document.getElementById('leaderList');
-    list.innerHTML='<li>Player1 - 100</li><li>Player2 - 80</li><li>Player3 - 50</li>';
-});
-
-document.getElementById('scoreBtn').addEventListener('click',()=>{alert('Your Current Score: '+score);});
-document.getElementById('backBtn').addEventListener('click',()=>{document.getElementById('leaderboardScreen').style.display='none';document.getElementById('homeScreen').style.display='flex';});
-
-window.addEventListener('keydown',e=>{if(e.code==='KeyR'&&gameOver) restartGame();});
-</script>
-
+<script src="game.js"></script>
 </body>
 </html>
